# stm32-workspace

./: .gitignore  README.md  flake.nix
Blue Pill/01-Blink/: .mxproject  01-Blink.ioc  Makefile
Blue Pill/01-Blink/Core/Inc/: main.h
Blue Pill/01-Blink/Core/Src/: main.c
C/Cube/: .gitignore
C/Cube/Hello-nucleo/: Hello-nucleo.ioc
C/Cube/Hello-nucleo/Core/Inc/: stm32f7xx_hal_conf.h
C/Cube/Hello-nucleo/Core/Src/: main.c
C/Cube/Nucleo/00-Hello/: .cproject  .mxproject  .project  00-Hello Debug.launch  00-Hello.ioc
C/Cube/Nucleo/01-ISR/: .cproject  .mxproject  .project  01-ISR Debug.launch  01-ISR.ioc
C/discovery/: Makefile  main.c
C/nucleo/: Makefile  linker_script.ld  main.c
Discovery/01-Basic_Blink/: .mxproject  01-Basic_Blink.ioc  Makefile
Discovery/01-Basic_Blink/Core/Src/: main.c
Discovery/02-PWM/: .mxproject  02-PWM.ioc  Makefile
Discovery/02-PWM/Core/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
Discovery/02-PWM/Core/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
Discovery/03-Button/: .mxproject  03-Button.ioc  Makefile
Discovery/03-Button/Core/Src/: main.c
Discovery/04-Interrupt_Button/: .mxproject  04-Interrupt_Button.ioc  Makefile
Discovery/04-Interrupt_Button/Core/Inc/: main.h  stm32f3xx_it.h
Discovery/04-Interrupt_Button/Core/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
discovery/src/: main.rs
nucleo/.cargo/: config
rust/: Cargo.toml
rust/discovery/: Cargo.toml  Embed.toml
rust/discovery/.cargo/: config
rust/nucleo/: Cargo.toml  Embed.toml
rust/nucleo/src/: main.rs
(+6 files in other folders)
