[package]
name = "discovery"
version = "0.1.0"
authors = ["Eugene Lomov <eugene.v.lomov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = {version = "0.4.0"}
stm32f3xx-hal = { version = "0.9.0", features = ["ld", "rt", "stm32f303xc"] }
